moving scheels around

--- a/index.html
+++ b/index.html
@@ -148,16 +148,16 @@
                        href="#carousel-example-generic" data-slide="next"><span class="glyphicon glyphicon-chevron-right">
                        </span></a>
            </div>
-				
+
 
 					 <div class="sponsors">
-           <a href="http://www.gordyscountymarket.net" target="_blank">
-             <img class="indexTitleSponsor" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market">
+						 <a href="http://www.scheels.com" target="_blank">
+	             <img class="indexTitleSponsor" src="images\sponsors\scheelsLarge.png" alt="Scheels">
+	           </a>
 
- </a>
-           <a href="http://www.scheels.com" target="_blank">
-             <img class="indexTitleSponsor" src="images\sponsors\scheelsLarge.png" alt="Scheels">
-           </a>
+           <a href="http://www.gordyscountymarket.net" target="_blank">
+             <img class="indexTitleSponsor" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market"></a>
+
         <a href="http://www.subway.com/subwayroot/default.aspx" target="_blank">
 <img class="indexTitleSponsor" src="images\sponsors\Subway.png" alt="Subway">
 </a>
@@ -234,21 +234,25 @@
         <!-- #col-sm-6  -->
         <div class="col-sm-6">
           <br />
-					<div class="sponsors">
-            <a href="http://www.gordyscountymarket.net" target="_blank">
-              <img class="indexTitleSponsor" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market">
-            </a>
-            <a href="http://www.scheels.com" target="_blank">
-              <img class="indexTitleSponsor" src="images\sponsors\scheelsLarge.png" alt="Scheels">
-            </a>
-        		<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank">
-							<img class="indexTitleSponsor" src="images\sponsors\Subway.png" alt="Subway">
-						</a>
-          </div>
+
           <!-- BREAK -->
           <div class="videowrapper">
           	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/xfDY-XQVjqE" frameborder="0" allowfullscreen></iframe>
           </div>
+
+					<div class="sponsors">
+						<a href="http://www.scheels.com" target="_blank">
+							<img class="indexTitleSponsor" src="images\sponsors\scheelsLarge.png" alt="Scheels">
+						</a>
+
+						<a href="http://www.gordyscountymarket.net" target="_blank">
+							<img class="indexTitleSponsor" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market">
+						</a>
+
+						<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank">
+							<img class="indexTitleSponsor" src="images\sponsors\Subway.png" alt="Subway">
+						</a>
+					</div>
 
         </div>
         <!-- #col-sm-6  -->
