2016 results would not show because of the accordion issue, made a different collapse

--- a/pastResults.html
+++ b/pastResults.html
@@ -137,7 +137,7 @@
 
 
 <div class="panel panel-default">
-	<a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
+	<a data-toggle="collapse" data-parent="#accordion" href="#collapse0">
 		<div class="panel-heading">
 			<h4 class="panel-title">
 				Live Results
@@ -145,7 +145,7 @@
 			<span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
 		</div>
 	</a>
-	<div id="collapse1" class="panel-collapse collapse ">
+	<div id="collapse0" class="panel-collapse collapse ">
 		<div class="panel-body">
 	<div class="fluidmedia">
 		<iframe src="https://docs.google.com/spreadsheets/d/1ZdHwFk3E6TqOaO8wED-3TuuyVlr-3fCN9mcw9WaQCQA/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
@@ -155,8 +155,7 @@
 	</div>
 </div>
 
-
-
+<!-- new -->
 
 				<div class="panel panel-default">
           <a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
