updated rules should have saved the pdf as the same name

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
           <br />
           <!-- BREAK -->
           <div class="btn-center">
-            <a target="_blank" href="assets/rules2017.pdf"> <button class="btn1">Click here to see the rules</button></a>
+            <a target="_blank" href="assets/2017_Rules_of_the_Tournament2.pdf"> <button class="btn1">Click here to see the rules</button></a>
           </div>
         </div>
         <!-- #col-sm-6  -->
