--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                </ol>
                <div class="carousel-inner">
                    <div class="item active">
-                       <img src="images/slider/slide3.png" alt="First slide">
+                       <img src="images/slider/slide5.png" alt="First slide">
                        <div class="carousel-caption">
 												 <div class="col-md-12 text-center">
 												 <h6 class="headers"> Like us on Facebook </h6>
@@ -131,18 +131,27 @@
 											 </div>
                    </div>
                    <div class="item">
-                       <img src="images/slider/slide2.png" alt="Second slide">
+                       <img src="images/slider/slide1.png" alt="Second slide">
                        <div class="carousel-caption">
 
                        </div>
                    </div>
+									 <div class="item">
+											 <img src="images/slider/slide6.png" alt="Third slide">
+											 <div class="carousel-caption">
+											 </div>
+									 </div>
                    <div class="item">
-                       <img src="images/slider/slide1.png" alt="Third slide">
+                       <img src="images/slider/slide3.png" alt="Third slide">
                        <div class="carousel-caption">
-												  <h6 class="headers"> Like us on Facebook </h6>
                        </div>
                    </div>
-               </div>
+									 <div class="item">
+                       <img src="images/slider/slide4.png" alt="Third slide">
+                       <div class="carousel-caption">
+                       </div>
+                   </div>
+
                <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
                    <span class="glyphicon glyphicon-chevron-left"></span></a><a class="right carousel-control"
                        href="#carousel-example-generic" data-slide="next"><span class="glyphicon glyphicon-chevron-right">
