Revert "removal of like us on fb"
This reverts commit 960769a594603548a34f9e7c4aec1ace9d3dba5a.

--- a/index.html
+++ b/index.html
@@ -125,6 +125,9 @@
                    <div class="item active">
                        <img src="images/slider/slide5.png" alt="First slide">
                        <div class="carousel-caption">
+												 <div class="col-md-12 text-center">
+												 <h6 class="headers"> Like us on Facebook </h6>
+                       </div>
 											 </div>
                    </div>
                    <div class="item">
