--- a/tickets.html
+++ b/tickets.html
@@ -165,9 +165,11 @@
 				<h3 class="headers">Tickets can also be purchased at: </h3>
 				<ul class="list">
 					<li>Scheels until 9pm Friday, February 10th</li>
+					<li>Gordy’s Market select locations* until 10:00pm Friday, February 10th</li>
+					<li>Eau Claire Ford</li>
 					<li>The View at Lake Wissota</li>
 					<li>The Edge Pub &amp; Eatery on Lake Wissota</li>
-					<li>Gordy’s Market select locations* until 10:00pm Friday, February 10th</li>
+
 					<li>UWEC Recreation </h3></li>
 				</ul>
 				*Gordy’s Market Store Locations for Fish and Raffle Tickets: Lake Wissota, Downtown Chippewa Falls, Chippewa Commons, Birch Street (EC),
