--- a/index.html
+++ b/index.html
@@ -243,22 +243,8 @@
 
           <!-- BREAK -->
           <div class="videowrapper">
-          	<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/xfDY-XQVjqE" frameborder="0" allowfullscreen></iframe>
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/BsoRCmhcQhA" frameborder="0" allowfullscreen></iframe>
           </div>
-
-					<div class="sponsors">
-						<a href="http://www.scheels.com" target="_blank">
-							<img class="indexTitleSponsor" src="images\sponsors\scheelsLarge.png" alt="Scheels">
-						</a>
-
-						<a href="http://www.gordyscountymarket.net" target="_blank">
-							<img class="indexTitleSponsor" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market">
-						</a>
-
-						<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank">
-							<img class="indexTitleSponsor" src="images\sponsors\Subway.png" alt="Subway">
-						</a>
-					</div>
 
         </div>
         <!-- #col-sm-6  -->
