--- a/contact.html
+++ b/contact.html
@@ -218,7 +218,7 @@
                       <td>Wissota Lions Club</td>
                     </tr>
                     <tr>
-                      <td>Matt Selvig</td>
+                      <td>Megan Zapatero</td>
                       <td>Gordy's Market</td>
                     </tr>
                     <tr>
