change image to jpeg to decrease load time

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                </ol>
                <div class="carousel-inner">
                    <div class="item active">
-                       <img src="images/slider/slide5.png" alt="First slide">
+                       <img src="images/slider/slide5.jpeg" alt="First slide">
                        <div class="carousel-caption">
 											 </div>
                    </div>
