--- a/index.html
+++ b/index.html
@@ -128,23 +128,23 @@
 											 </div>
                    </div>
                    <div class="item">
-                       <img src="images/slider/slide1.png" alt="Second slide">
+                       <img src="images/slider/slide1.jpeg" alt="Second slide">
                        <div class="carousel-caption">
 
                        </div>
                    </div>
 									 <div class="item">
-											 <img src="images/slider/slide6.png" alt="Third slide">
+											 <img src="images/slider/slide6.jpeg" alt="Third slide">
 											 <div class="carousel-caption">
 											 </div>
 									 </div>
                    <div class="item">
-                       <img src="images/slider/slide3.png" alt="Third slide">
+                       <img src="images/slider/slide3.jpeg" alt="Third slide">
                        <div class="carousel-caption">
                        </div>
                    </div>
 									 <div class="item">
-                       <img src="images/slider/slide4.png" alt="Third slide">
+                       <img src="images/slider/slide4.jpeg" alt="Third slide">
                        <div class="carousel-caption">
                        </div>
                    </div>
