added social media comments
social media

--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
 						</a>
 					</li>
 					<li>
-						<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
+						<a target="_blank" class="_blank" href="https://instagram.com/UWEC_Recreation/">
 							<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img>
 						</a>
 					</li>
 					<li>
-						<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
+						<a target="_blank" class="_blank" href="http://www.e-clubhouse.org/sites/lakewissota/">
 							<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
 						</a>
 					</li>
@@ -165,8 +165,7 @@
              <img class="indexTitleSponsor" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market"></a>
 
         <a href="http://www.subway.com/subwayroot/default.aspx" target="_blank">
-<img class="indexTitleSponsor" src="images\sponsors\Subway.png" alt="Subway">
-</a>
+					<img class="indexTitleSponsor" src="images\sponsors\Subway.png" alt="Subway"></a>
          </div>
 
 				 	</div>
@@ -237,9 +236,15 @@
             <a target="_blank" href="assets/2017_Rules_of_the_Tournament2.pdf"> <button class="btn1">Click here to see the rules</button></a>
           </div>
         </div>
+
         <!-- #col-sm-6  -->
         <div class="col-sm-6">
-          <br />
+  					
+						<h3 class="headers"><b>Social Media</b></h3>
+							<blockquote>
+							Like us on <a href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">Facebook</a> and follow us on <a href="https://twitter.com/uwecrecreation">Twitter</a> to receive updates and enter to win prizes the day of the event.
+							Keep your eyes out for our traveling Ice Castle at local Gordy's and Scheel's stores. Share your pictures of the Castle to enter to win a prize on February 11th.
+						</blockquote>
 
           <!-- BREAK -->
           <div class="videowrapper">
