--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
 						</a>
 					</li>
 					<li>
-						<a target="_blank" class="_blank" href="https://instagram.com/UWEC_Recreation/">
+						<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
 							<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img>
 						</a>
 					</li>
 					<li>
-						<a target="_blank" class="_blank" href="http://www.e-clubhouse.org/sites/lakewissota/">
+						<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
 							<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
 						</a>
 					</li>
@@ -239,7 +239,7 @@
 
         <!-- #col-sm-6  -->
         <div class="col-sm-6">
-  					
+
 						<h3 class="headers"><b>Social Media</b></h3>
 							<blockquote>
 							Like us on <a href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">Facebook</a> and follow us on <a href="https://twitter.com/uwecrecreation">Twitter</a> to receive updates and enter to win prizes the day of the event.
