--- a/tickets.html
+++ b/tickets.html
@@ -148,11 +148,11 @@
 			<h4 class="headers">Raffle Tickets:</h4>
 			<h4><b>$5 each or 5 for $20</b></h4>
 			<blockquote>
-				$7,500 in prizes includes a 2016 Polaris Sportsman 4-wheeler, Vexilar Fish Sonar, Benelli Shotgun, and more.  Tickets can be purchased up until 2:30pm on Saturday, February 11th at the weigh-in stations.
+				$7,500 in prizes includes a 2016 Polaris Sportsman 4-wheeler, Vexilar Fish Sonar, Benelli Shotgun, and more.  Tickets can be purchased up until the drawing on Saturday, February 11th at the weigh-in stations.
 
 				<br />
 				<br /> Raffle tickets purchased online will have the stubs completed by contest administrators and entered into the drawing. Claim tickets will be mailed through February 3rd to the address indicated.  After February 3rd, claim tickets will be available for
-				pick-up at the weigh-in station in The View. NOTE: Raffle drawing begins at 3:00pm at The View. Please pick up claim tickets by 2:00pm.
+				pick-up at the weigh-in station in The View. NOTE: Raffle drawing begins at 3:00pm at The View. Please pick up claim tickets by 2:00pm.  Need not be present to win.
 			</blockquote>
 
 
@@ -164,8 +164,8 @@
 			<div>
 				<h3 class="headers">Tickets can also be purchased at: </h3>
 				<ul class="list">
-					<li>Scheels until 9pm Friday, February 10th</li>
-					<li>Gordy’s Market select locations* until 10:00pm Friday, February 10th</li>
+					<li>Scheels</li>
+					<li>Gordy’s Market select locations*</li>
 					<li>Eau Claire Ford</li>
 					<li>The View at Lake Wissota</li>
 					<li>The Edge Pub &amp; Eatery on Lake Wissota</li>
