--- a/schedule.html
+++ b/schedule.html
@@ -124,7 +124,7 @@
 					<!-- BREAK -->
 					<br />
 					<!-- BREAK -->
-					<h2 class="headers">Schedule</h2>
+					<h2 class="headers">Schedule </h2>
 				</div>
 				<!-- #col-sm-6 -->
 			</div>
@@ -134,41 +134,44 @@
 					<thead>
 						<!-- make these bold or the titles for the table of the schedule-->
 						<tr>
+							<th>Saturday, February 11th</th>
+							<th></th>
+							<th></th>
+						</tr>
+					</thead>
+
+					<thead>
+						<!-- make these bold or the titles for the table of the schedule-->
+						<tr>
 							<th>Location</th>
 							<th>Time</th>
 							<th>Event</th>
 						</tr>
 					</thead>
-					<tbody>
-						<tr>
-							<td><b>Saturday, February 11th</b></td>
-							<td></td>
-							<td></td>
-						</tr>
 						<tr>
 							<td>Lake Wissota</td>
 							<td>7:00AM</td>
 							<td>Contest Begins! No need to pre-register, just head out to the ice. </td>
 						</tr>
 						<tr>
-							<td>The View</td>
+							<td>The View &amp; The Edge Weigh in Stations</td>
 							<td>9:00AM</td>
-							<td>Last Chance to purchase additional Fish Tickets for $40</td>
+							<td>Last Chance to purchase additional Fish Tickets for $40, available 7:00AM-9:00AM</td>
 						</tr>
 						<tr>
 							<td>Lake Wissota</td>
 							<td>12:00PM</td>
-							<td>Kids Klub event on the ice in front of the View (Free lunch for kids)</td>
+							<td>Kids Klub event on the ice in front of The View (Free lunch for kids), Prize drawings at 1:00PM</td>
 						</tr>
 						<tr>
-							<td>The View &amp; The Edge Pub and Eatery</td>
+							<td>The View &amp; The Edge </td>
 							<td>2:00PM</td>
-							<td>Weigh-in Stations close, must be in line at 2:00PM to register your fish</td>
+							<td>Weigh-in Stations close, must be in line by 2:00PM to register your fish</td>
 						</tr>
 						<tr>
 							<td>The View</td>
 							<td>3:00PM</td>
-							<td>Last Chance to purchase raffle tickets, winners announced and prizes distributed</td>
+							<td>Raffle Prize drawing, tickets available for purchase until drawing begins</td>
 						</tr>
 						<tr>
 							<td>The View</td>
