Added WEAU Sponsor

--- a/sponsors.html
+++ b/sponsors.html
@@ -127,7 +127,7 @@
 				<div class="col-sm-4 center">
 					<a href="http://www.scheels.com" target="_blank"><img class="img-responsive center img-large" src="images\sponsors\scheelsLarge.png" alt="Scheels"></a>
 				</div>
-				
+
 				<div class="col-sm-4 center">
 					<a href="http://www.gordyscountymarket.net" target="_blank"><img class="img-responsive center img-large" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market"></a>
 				</div>
@@ -156,7 +156,14 @@
 					</div>
 				</div>
 
+
 				<div class="row">
+					<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
+					<div class="col-sm-3 center">
+						<a href="http://www.weau.com/" target="_blank"><img class="img-responsive center img-med" src="images\sponsors\weau13.png" alt="Weau 13 News"></a>
+					</div>
+
+
 					<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 					<div class="col-sm-3 center">
 						<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="img-responsive center img-med" src="images\sponsors\edge.png" alt="The Edge Pub and Eatery"></a>
@@ -169,14 +176,15 @@
 					<div class="col-sm-3 center">
 						<a href="http://www.gollonbait.com/" target="_blank"><img class="img-responsive center img-med" src="images\sponsors\gollon.png" alt="Gollon brothers"></a>
 					</div>
-
-					<div class="col-sm-3 center">
-						<a href="http://www.uwec.edu/dining/" target="_blank"><img class="img-responsive center img-med" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo"></a>
-					</div>
 				</div>
 				<br />
 				<!-- BREAK -->
 				<div class="row">
+
+					<div class="col-sm-3 center">
+						<a href="http://www.uwec.edu/dining/" target="_blank"><img class="img-responsive center img-med" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo"></a>
+					</div>
+
 					<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 
 					<div class="col-sm-3 center">
