Added New Sponsors and New Prize List

--- a/sponsors.html
+++ b/sponsors.html
@@ -143,37 +143,34 @@
 				<div class="text-center">
 				<h2 class="headers"><b>Sponsors</b></h2>
 				<div class="row">
-					<div class="col-sm-4 center">
+					<div class="col-sm-3 center">
 						<a href="http://www.eauclaireford.com/" target="_blank"><img class="img-responsive center img-ml" src="images\sponsors\ford.png" alt="Ford"></a>
 					</div>
-					<div class="col-sm-4 center">
+					<div class="col-sm-3 center">
 						<a href="http://www.geteskimo.com/" target="_blank"><img class="img-responsive center img-ml" src="images\sponsors\eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
 					</div>
 
 					<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-					<div class="col-sm-4 center">
+					<div class="col-sm-3 center">
 						<a href="http://www.prestigervauto.com/" target="_blank"><img class="img-responsive center img-ml" src="images\sponsors\prestige.png" alt="Presitge Auto Corportation"></a>
+					</div>
+					<div class="col-sm-3 center">
+						<a href="http://www.weau.com/" target="_blank"><img class="img-responsive center img-ml" src="images\sponsors\weau13.png" alt="Weau 13 News"></a>
 					</div>
 				</div>
 
 
 				<div class="row">
 					<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-					<div class="col-sm-3 center">
-						<a href="http://www.weau.com/" target="_blank"><img class="img-responsive center img-med" src="images\sponsors\weau13.png" alt="Weau 13 News"></a>
-					</div>
-
-
-					<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-					<div class="col-sm-3 center">
+					<div class="col-sm-4 center">
 						<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="img-responsive center img-med" src="images\sponsors\edge.png" alt="The Edge Pub and Eatery"></a>
 					</div>
 					<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-					<div class="col-sm-3 center">
+					<div class="col-sm-4 center">
 						<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="img-responsive center img-med" src="images\sponsors\view.png" alt="The View"></a>
 					</div>
 					<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
-					<div class="col-sm-3 center">
+					<div class="col-sm-4 center">
 						<a href="http://www.gollonbait.com/" target="_blank"><img class="img-responsive center img-med" src="images\sponsors\gollon.png" alt="Gollon brothers"></a>
 					</div>
 				</div>
@@ -196,6 +193,42 @@
 					</div>
 					<div class="col-sm-3 center">
 						<a href="http://www.leinie.com" target="_blank"><img class="img-responsive center img-med" src="images\sponsors\lein.png" alt="Leinenkugel's"> </a>
+					</div>
+
+					<div class="row">
+						<div class="col-sm-4 center">
+							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\briggs.png"</a>
+						</div>
+						<div class="col-sm-4 center">
+							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\chanhassen.png"</a>
+						</div>
+						<div class="col-sm-4 center">
+							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\gb.png"</a>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col-sm-4 center">
+							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\ho-chunk.png"</a>
+						</div>
+						<div class="col-sm-4 center">
+							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\mb.png"</a>
+						</div>
+						<div class="col-sm-4 center">
+							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\ob.png"</a>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col-sm-4 center">
+							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\rnb.png"</a>
+						</div>
+						<div class="col-sm-4 center">
+							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\brew.png"</a>
+						</div>
+						<div class="col-sm-4 center">
+							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\zl.png"</a>
+						</div>
 					</div>
 
 			<!-- #row  -->
