--- a/prizes.html
+++ b/prizes.html
@@ -167,325 +167,325 @@
 								<th>Prize</th>
 								</tr>
 								<tr>
-									<td>1</td>
-									<td>*$1,000 Cash</td>
-								</tr>
-								<tr>
-									<td>2</td>
-									<td>Eskimo Ice Auger</td>
-								</tr>
-								<tr>
-									<td>3</td>
-									<td>Ice Armor XL Parka</td>
-								</tr>
-								<tr>
-									<td>4</td>
-									<td>Eskimo QuickFlip 1</td>
-								</tr>
-								<tr>
-									<td>5</td>
-									<td>Fatfish 949 Ice Shack</td>
-								</tr>
-								<tr>
-									<td>6</td>
-									<td>Rivers Edge Oasis 1-Man Ladder Stand</td>
-								</tr>
-								<tr>
-									<td>7</td>
-									<td>Moultrie M-990I Game Camera</td>
-								</tr>
-								<tr>
-									<td>8</td>
-									<td>Deep Freeze BlueTipz Tip Up Alarm System</td>
-								</tr>
-								<tr>
-									<td>9</td>
-									<td>Eskimo Ice Auger</td>
-								</tr>
-								<tr>
-									<td>10</td>
-									<td>Vexilar FL-18 Genz Pack Fish Sonar</td>
-								</tr>
-								<tr>
-									<td>11</td>
-									<td>Rivers Edge Big Foot XL Stand</td>
-								</tr>
-								<tr>
-									<td>12</td>
-									<td>St. Croix Premier Ice Combo</td>
-								</tr>
-								<tr>
-									<td>13</td>
-									<td>Eskimo QuickFlip 2</td>
-								</tr>
-								<tr>
-									<td>14</td>
-									<td>Mr. Heater Propane buddy</td>
-								</tr>
-								<tr>
-									<td>15</td>
-									<td>Eskimo Ice Auger</td>
-								</tr>
-								<tr>
-									<td>16</td>
-									<td>Pro Classic Ice Fishing Combo</td>
-								</tr>
-								<tr>
-									<td>17</td>
-									<td>Wildgame Innovations Handheld Card Viewer Trail</td>
-								</tr>
-								<tr>
-									<td>18</td>
-									<td>Fatfish 949 Ice Shack</td>
-								</tr>
-								<tr>
-									<td>19</td>
-									<td>Pflueger Trion Spinning Reel</td>
-								</tr>
-								<tr>
-									<td>20</td>
-									<td>ION Ice Auger</td>
-								</tr>
-								<tr>
-									<td>21</td>
-									<td>Eskimo Hand Auger</td>
-								</tr>
-								<tr>
-									<td>22</td>
-									<td>Rapala Electric Fillet Knife</td>
-								</tr>
-								<tr>
-									<td>23</td>
-									<td>Rivers Edge Oasis 1-Man Ladder Stand</td>
-								</tr>
-								<tr>
-									<td>24</td>
-									<td>Eskimo Ice Auger</td>
-								</tr>
-								<tr>
-									<td>25</td>
-									<td>*$500 Cash</td>
-								</tr>
-								<tr>
-									<td>30</td>
-									<td>Tip Down</td>
-								</tr>
-								<tr>
-									<td>35</td>
-									<td>Uncle Josh Original Beaver Dam Tip-Up</td>
-								</tr>
-								<tr>
-									<td>40</td>
-									<td>Pro Classic Ice Fishing Combo</td>
-								</tr>
-								<tr>
-									<td>45</td>
-									<td>Fatfish 949 Ice Shack</td>
-								</tr>
-								<tr>
-									<td>50</td>
-									<td>Eskimo Ice Auger</td>
-								</tr>
-								<tr>
-									<td>55</td>
-									<td>Rivers Edge Big Foot XL Stand</td>
-								</tr>
-								<tr>
-									<td>60</td>
-									<td>Scheels Outfitters Rectangular Ice Combo Bag</td>
-								</tr>
-								<tr>
-									<td>65</td>
-									<td>Pflueger Trion Spinning Reel</td>
-								</tr>
-								<tr>
-									<td>70</td>
-									<td>ION Ice Auger</td>
-								</tr>
-								<tr>
-									<td>75</td>
-									<td>Frabill Straight Line 101 Ice Reel</td>
-								</tr>
-								<tr>
-									<td>80</td>
-									<td>Pro Classic Ice Fishing Combo</td>
-								</tr>
-								<tr>
-									<td>85</td>
-									<td>Eskimo QuickFlip 1</td>
-								</tr>
-								<tr>
-									<td>90</td>
-									<td>Uncle Josh Original Beaver Dam Tip-Up</td>
-								</tr>
-								<tr>
-									<td>95</td>
-									<td>Scheels Outfitters Rectangular Ice Combo Bag</td>
-								</tr>
-								<tr>
-									<td>100</td>
-									<td>Eskimo Ice Auger</td>
-								</tr>
-								<tr>
-									<td>105</td>
-									<td>Scheels Ice Combo Hard Case</td>
-								</tr>
-								<tr>
-									<td>110</td>
-									<td>GPS New Generation ETREX 10</td>
-								</tr>
-								<tr>
-									<td>115</td>
-									<td>Rapala Electric Fillet Knife</td>
-								</tr>
-								<tr>
-									<td>120</td>
-									<td>Rivers Edge Oasis 1-Man Ladder Stand</td>
-								</tr>
-								<tr>
-									<td>125</td>
-									<td>Ice Castle</td>
-								</tr>
-								<tr>
-									<td>130</td>
-									<td>St. Croix Premier Ice Combo</td>
-								</tr>
-								<tr>
-									<td>135</td>
-									<td>Frabill Straight Line 101 Ice Reel</td>
-								</tr>
-								<tr>
-									<td>140</td>
-									<td>Marcum Underwater Camera</td>
-								</tr>
-								<tr>
-									<td>145</td>
-									<td>Tip Down</td>
-								</tr>
-								<tr>
-									<td>150</td>
-									<td>*$500 Cash</td>
-								</tr>
-								<tr>
-									<td>155</td>
-									<td>Scheels Outfitters Rectangular Ice Combo Bag</td>
-								</tr>
-								<tr>
-									<td>160</td>
-									<td>Rivers Edge Big Foot XL Stand</td>
-								</tr>
-								<tr>
-									<td>165</td>
-									<td>Uncle Josh Original Beaver Dam Tip-Up</td>
-								</tr>
-								<tr>
-									<td>170</td>
-									<td>Fatfish 949 Ice Shack</td>
-								</tr>
-								<tr>
-									<td>175</td>
-									<td>Eskimo Ice Auger</td>
-								</tr>
-								<tr>
-									<td>180</td>
-									<td>Eskimo QuickFip 1</td>
-								</tr>
-								<tr>
-									<td>185</td>
-									<td>Moultrie M-990I Game Camera</td>
-								</tr>
-								<tr>
-									<td>190</td>
-									<td>Pro Classic Ice Fishing Combo</td>
-								</tr>
-								<tr>
-									<td>195</td>
-									<td>ION Ice Auger</td>
-								</tr>
-								<tr>
-									<td>200</td>
-									<td>Fatfish 949 Ice Shack</td>
-								</tr>
-								<tr>
-									<td>205</td>
-									<td>Eskimo Ice Auger</td>
-								</tr>
-								<tr>
-									<td>210</td>
-									<td>Scheels Ice Combo Hard Case</td>
-								</tr>
-								<tr>
-									<td>215</td>
-									<td>Rivers Edge Big Foot XL Stand</td>
-								</tr>
-								<tr>
-									<td>220</td>
-									<td>Pflueger Trion Spinning Reel</td>
-								</tr>
-								<tr>
-									<td>225</td>
-									<td>Eskimo QuickFlip 2</td>
-								</tr>
-								<tr>
-									<td>230</td>
-									<td>Scheels Outfitters Rectangular Ice Combo Bag</td>
-								</tr>
-								<tr>
-									<td>235</td>
-									<td>Eskimo Ice Auger</td>
-								</tr>
-								<tr>
-									<td>240</td>
-									<td>Rivers Edge Oasis 1-Man Ladder Stand</td>
-								</tr>
-								<tr>
-									<td>245</td>
-									<td>Frabill Straight Line 101 Ice Reel</td>
-								</tr>
-								<tr>
-									<td>250</td>
-									<td>Fatfish 949 Ice Shack</td>
-								</tr>
-								<tr>
-									<td>255</td>
-									<td>Eskimo Ice Auger</td>
-								</tr>
-								<tr>
-									<td>260</td>
-									<td>Pro Classic Ice Fishing Combo</td>
-								</tr>
-								<tr>
-									<td>265</td>
-									<td>Rivers Edge Oasis 1-Man Ladder Stand</td>
-								</tr>
-								<tr>
-									<td>270</td>
-									<td>Eskimo Ice Auger</td>
-								</tr>
-								<tr>
-									<td>275</td>
-									<td>Eskimo QuickFip 1</td>
-								</tr>
-								<tr>
-									<td>280</td>
-									<td>Eskimo Hand Auger</td>
-								</tr>
-								<tr>
-									<td>285</td>
-									<td>Deep Freeze BlueTipz Tip Up Alarm System</td>
-								</tr>
-								<tr>
-									<td>290</td>
-									<td>Mr. Heater Propane buddy</td>
-								</tr>
-								<tr>
-									<td>295</td>
-									<td>Uncle Josh Original Beaver Dam Tip-Up</td>
-								</tr>
-								<tr>
-									<td>300</td>
-									<td>*$500 Cash</td>
-								</tr>
+				            <td>1</td>
+				            <td>*$1,000 Cash</td>
+				        </tr>
+				        <tr>
+				            <td>2</td>
+				            <td>8-in Ion Ice Auger w/ Reverse</td>
+				        </tr>
+				        <tr>
+				            <td>3</td>
+				            <td>Eskimo QuickFlip Two-Man Shelter</td>
+				        </tr>
+				        <tr>
+				            <td>4</td>
+				            <td>Radar Backwoods Camo Hunting Blind</td>
+				        </tr>
+				        <tr>
+				            <td>5</td>
+				            <td>Eskimo FatFish 949 Ice Shack</td>
+				        </tr>
+				        <tr>
+				            <td>6</td>
+				            <td>Eskimo High Compression 8-in Propane Ice Auger</td>
+				        </tr>
+				        <tr>
+				            <td>7</td>
+				            <td>River's Edge Big Foot XL Classic Hang-On Stand</td>
+				        </tr>
+				        <tr>
+				            <td>8</td>
+				            <td>Moultrie A-20 Game Camera </td>
+				        </tr>
+				        <tr>
+				            <td>9</td>
+				            <td>HT Tip-Up/Rod Tote (Tip-Up Included)</td>
+				        </tr>
+				        <tr>
+				            <td>10</td>
+				            <td>Vexilar FL-8SE Genz Pack Fish Sonar </td>
+				        </tr>
+				        <tr>
+				            <td>11</td>
+				            <td>IFISH PRO TIP UP</td>
+				        </tr>
+				        <tr>
+				            <td>12</td>
+				            <td>Eskimo 43cc 10-in Mako Ice Auger</td>
+				        </tr>
+				        <tr>
+				            <td>13</td>
+				            <td>Wildgame Innovations Handheld Card Viewer Trail Pad</td>
+				        </tr>
+				        <tr>
+				            <td>14</td>
+				            <td>Beaver Dam Bucket</td>
+				        </tr>
+				        <tr>
+				            <td>15</td>
+				            <td> Garmin eTrex10 GPS</td>
+				        </tr>
+				        <tr>
+				            <td>16</td>
+				            <td> Uncle Josh Original Beaver Dam Tip Up</td>
+				        </tr>
+				        <tr>
+				            <td>17</td>
+				            <td>Rapala Electric Fillet Knife</td>
+				        </tr>
+				        <tr>
+				            <td>18</td>
+				            <td>Eskimo QuickFlip Two-Man Shelter</td>
+				        </tr>
+				        <tr>
+				            <td>19</td>
+				            <td>Ice Armor Gloves </td>
+				        </tr>
+				        <tr>
+				            <td>20</td>
+				            <td>HT Rod Locker w/ Tip Up and Jig Poles</td>
+				        </tr>
+				        <tr>
+				            <td>21</td>
+				            <td>Ice Armor Parka</td>
+				        </tr>
+				        <tr>
+				            <td>22</td>
+				            <td>HT Tip-Up/Rod Tote (Tip-Up Included)</td>
+				        </tr>
+				        <tr>
+				            <td>23</td>
+				            <td>Mr. Heater Propane Little Buddy</td>
+				        </tr>
+				        <tr>
+				            <td>24</td>
+				            <td>Dangler</td>
+				        </tr>
+				        <tr>
+				            <td>25</td>
+				            <td>*$500 Cash</td>
+				        </tr>
+				        <tr>
+				            <td>30</td>
+				            <td>Pflueger Trion Spinning Reel</td>
+				        </tr>
+				        <tr>
+				            <td>35</td>
+				            <td>Scheels Outfitters Rectangular Ice Combo Bag + Frabill Straight Line 101 Ice Reel</td>
+				        </tr>
+				        <tr>
+				            <td>40</td>
+				            <td>River's Edge Classic Ladder Stand</td>
+				        </tr>
+				        <tr>
+				            <td>45</td>
+				            <td>Eskimo FatFish 949 Ice Shack</td>
+				        </tr>
+				        <tr>
+				            <td>50</td>
+				            <td>Jiffy Powerhead Ice Auger</td>
+				        </tr>
+				        <tr>
+				            <td>55</td>
+				            <td>Uncle Josh Original Beaver Dam Tip-Up</td>
+				        </tr>
+				        <tr>
+				            <td>60</td>
+				            <td>Scheels Gift Card + Genie Jar Large (Optimus)</td>
+				        </tr>
+				        <tr>
+				            <td>65</td>
+				            <td>Frabill Straight Line 101 Ice Reel</td>
+				        </tr>
+				        <tr>
+				            <td>70</td>
+				            <td>8-in Ion Ice Auger w/ Reverse</td>
+				        </tr>
+				        <tr>
+				            <td>75</td>
+				            <td>Jaw Jacker</td>
+				        </tr>
+				        <tr>
+				            <td>80</td>
+				            <td>Scheels Outfitters Rectangular Ice Combo Bag + Scheels Gift Card</td>
+				        </tr>
+				        <tr>
+				            <td>85</td>
+				            <td>Eskimo QuickFlip One-Man Shelter</td>
+				        </tr>
+				        <tr>
+				            <td>90</td>
+				            <td>Pro Classic Ice Fishing Combo</td>
+				        </tr>
+				        <tr>
+				            <td>95</td>
+				            <td>Ice Armor Gloves</td>
+				        </tr>
+				        <tr>
+				            <td>100</td>
+				            <td>Eskimo 43cc 8-in Mako Ice Auger</td>
+				        </tr>
+				        <tr>
+				            <td>105</td>
+				            <td> SKINZ IT</td>
+				        </tr>
+				        <tr>
+				            <td>110</td>
+				            <td>Scheels Outfitters Rectangular Ice Combo Bag + Frabill Straight Line 101 Ice Reel</td>
+				        </tr>
+				        <tr>
+				            <td>115</td>
+				            <td>Berkley Combo</td>
+				        </tr>
+				        <tr>
+				            <td>120</td>
+				            <td>Scheels Gift Card + Genie Jar Large (Optimus)</td>
+				        </tr>
+				        <tr>
+				            <td>125</td>
+				            <td>Ice Castle</td>
+				        </tr>
+				        <tr>
+				            <td>130</td>
+				            <td>Uncle Josh Original Beaver Dam Tip-Up</td>
+				        </tr>
+				        <tr>
+				            <td>135</td>
+				            <td>Eskimo FatFish 949 Ice Shack</td>
+				        </tr>
+				        <tr>
+				            <td>140</td>
+				            <td>Rivers Edge Big Foot XL Tree Stand</td>
+				        </tr>
+				        <tr>
+				            <td>145</td>
+				            <td>Berkley Combo</td>
+				        </tr>
+				        <tr>
+				            <td>150</td>
+				            <td>Eskimo FatFish 949 Ice Shack</td>
+				        </tr>
+				        <tr>
+				            <td>155</td>
+				            <td>Pro Classic Ice Fishing Combo</td>
+				        </tr>
+				        <tr>
+				            <td>160</td>
+				            <td>Beaver Dam Thermal Tip Up</td>
+				        </tr>
+				        <tr>
+				            <td>165</td>
+				            <td>HT Tip-Up/Rod Tote (Tip-Up Included)</td>
+				        </tr>
+				        <tr>
+				            <td>170</td>
+				            <td> Eskimo Hand Auger</td>
+				        </tr>
+				        <tr>
+				            <td>175</td>
+				            <td>Eskimo High Compression 8-in Propane Ice Auger</td>
+				        </tr>
+				        <tr>
+				            <td>180</td>
+				            <td>Eskimo QuickFlip One-Man-Shelter</td>
+				        </tr>
+				        <tr>
+				            <td>185</td>
+				            <td>Scheels Gift Card + Genie Jar Large (Optimus)</td>
+				        </tr>
+				        <tr>
+				            <td>190</td>
+				            <td>Pro Classic Ice Fishing Combo</td>
+				        </tr>
+				        <tr>
+				            <td>195</td>
+				            <td>Scheels Outfitters Rectangular Ice Combo Bag + Frabill Straight Line 101 Ice Reel</td>
+				        </tr>
+				        <tr>
+				            <td>200</td>
+				            <td>Uncle Josh Original Beaver Dam Tip-Up</td>
+				        </tr>
+				        <tr>
+				            <td>205</td>
+				            <td>Jaw Jacker</td>
+				        </tr>
+				        <tr>
+				            <td>210</td>
+				            <td>Beaver Dam Thermal Tip Up</td>
+				        </tr>
+				        <tr>
+				            <td>215</td>
+				            <td>HT Tip-Up/Rod Tote (Tip-Up Included)</td>
+				        </tr>
+				        <tr>
+				            <td>220</td>
+				            <td>Rivers Edge Big Foot XL Tree Stand</td>
+				        </tr>
+				        <tr>
+				            <td>225</td>
+				            <td>Pflueger Trion Spinning Reel</td>
+				        </tr>
+				        <tr>
+				            <td>230</td>
+				            <td>Wildgame Innovations Handheld Card Viewer Trail Pad</td>
+				        </tr>
+				        <tr>
+				            <td>235</td>
+				            <td>Eskimo High Compression 8-in Propane Ice Auger</td>
+				        </tr>
+				        <tr>
+				            <td>240</td>
+				            <td>Mr. Heater Propane Little Buddy</td>
+				        </tr>
+				        <tr>
+				            <td>245</td>
+				            <td>Rapala Electric Fillet Knife</td>
+				        </tr>
+				        <tr>
+				            <td>250</td>
+				            <td>Beaver Dam Bucket</td>
+				        </tr>
+				        <tr>
+				            <td>255</td>
+				            <td>HT Tip-Up/Rod Tote (Tip-Up Included)</td>
+				        </tr>
+				        <tr>
+				            <td>260</td>
+				            <td>Moultrie A-20 Game Camera </td>
+				        </tr>
+				        <tr>
+				            <td>265</td>
+				            <td>River's Edge Classic Ladder Stand</td>
+				        </tr>
+				        <tr>
+				            <td>270</td>
+				            <td>HT Rod Locker w/ Tip Up and Jig Poles</td>
+				        </tr>
+				        <tr>
+				            <td>275</td>
+				            <td>Pro Classic Ice Fishing Combo</td>
+				        </tr>
+				        <tr>
+				            <td>280</td>
+				            <td>Eskimo High Compression 8-in Propane Ice Auger</td>
+				        </tr>
+				        <tr>
+				            <td>285</td>
+				            <td>IFISH PRO TIP UP</td>
+				        </tr>
+				        <tr>
+				            <td>290</td>
+				            <td>Vexilar FL-8SE Genz Pack Fish Sonar </td>
+				        </tr>
+				        <tr>
+				            <td>295</td>
+				            <td>Dangler</td>
+				        </tr>
+				        <tr>
+				            <td>300</td>
+				            <td>*$500 Cash</td>
+				        </tr>
 							</tbody>
 						</table>
 					</div>
