Added minor sponsors + other
Added minor sponsors
Flip flopped wear and goody’s at bottom of page
Made prize page say 2017
Added weau to list of sponsors on all extra pages

--- a/sponsors.html
+++ b/sponsors.html
@@ -208,8 +208,8 @@
 					</div>
 
 					<div class="row">
-						<div class="col-sm-4 center">
-							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\ho-chunk.png"</a>
+						<div class="col-sm-4 center" style="margin-top: 6px";>
+							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\vexilar.png"</a>
 						</div>
 						<div class="col-sm-4 center">
 							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\mb.png"</a>
@@ -221,13 +221,37 @@
 
 					<div class="row">
 						<div class="col-sm-4 center">
-							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\rnb.png"</a>
+							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\ho-chunk.png"</a>
 						</div>
 						<div class="col-sm-4 center">
 							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\brew.png"</a>
 						</div>
+						<div class="col-sm-4 center" style="margin-top: 7px";>
+							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\jawjacker.png"</a>
+						</div>
+					</div>
+
+					<div class="row">
 						<div class="col-sm-4 center">
-							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\zl.png"</a>
+							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\ifishpro.png"</a>
+						</div>
+						<div class="col-sm-4 center">
+							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\dangler.png"</a>
+						</div>
+						<div class="col-sm-4 center">
+							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\stcroix.png"</a>
+						</div>
+					</div>
+
+					<div class="row">
+						<div class="col-sm-4 center">
+							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\rnb.png"</a>
+						</div>
+						<div class="col-sm-4 center" style="margin-top: 18px";>
+							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\visitec.png"</a>
+						</div>
+						<div class="col-sm-4 center">
+
 						</div>
 					</div>
 
