--- a/sponsors.html
+++ b/sponsors.html
@@ -247,11 +247,11 @@
 						<div class="col-sm-4 center">
 							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\rnb.png"</a>
 						</div>
-						<div class="col-sm-4 center" style="margin-top: 18px";>
+						<div class="col-sm-4 center" style="margin-top: 18px">
 							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\visitec.png"</a>
 						</div>
-						<div class="col-sm-4 center">
-
+						<div class="col-sm-4 center" style="margin-top: 18px">
+							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\jiffy.jpg"</a>
 						</div>
 					</div>
 
