--- a/pastResults.html
+++ b/pastResults.html
@@ -136,7 +136,7 @@
 
 
 
-<div class="panel panel-default">
+<!-- <div class="panel panel-default">
 	<a data-toggle="collapse" data-parent="#accordion" href="#collapse0">
 		<div class="panel-heading">
 			<h4 class="panel-title">
@@ -153,7 +153,7 @@
 
 		</div>
 	</div>
-</div>
+</div> -->
 
 <!-- new -->
 
