--- a/sponsors.html
+++ b/sponsors.html
@@ -197,61 +197,61 @@
 
 					<div class="row">
 						<div class="col-sm-4 center">
-							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\briggs.png"</a>
+							<a href="http://briggstent.com/" target="_blank"><img class="img-responsive center img-sm" src="images\sponsors\minor-logos\briggs.png"></a>
 						</div>
 						<div class="col-sm-4 center">
-							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\chanhassen.png"</a>
+							<a href="https://www.chanhassentheatres.com/Online/default.asp" target="_blank"><img class="img-responsive center img-sm" src="images\sponsors\minor-logos\chanhassen.png"></a>
 						</div>
 						<div class="col-sm-4 center">
-							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\gb.png"</a>
+							<a href="http://www.packers.com/" target="_blank"><img class="img-responsive center img-sm" src="images\sponsors\minor-logos\gb.png"></a>
 						</div>
 					</div>
 
 					<div class="row">
 						<div class="col-sm-4 center" style="margin-top: 6px";>
-							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\vexilar.png"</a>
+							<a href="http://www.vexilar.com/" target="_blank"><img class="img-responsive center img-sm" src="images\sponsors\minor-logos\vexilar.png"></a>
 						</div>
 						<div class="col-sm-4 center">
-							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\mb.png"</a>
+							<a href="http://www.nba.com/bucks/" target="_blank"><img class="img-responsive center img-sm" src="images\sponsors\minor-logos\mb.png"></a>
 						</div>
 						<div class="col-sm-4 center">
-							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\ob.png"</a>
+							<a href="https://www.otterbox.com/" target="_blank"><img class="img-responsive center img-sm" src="images\sponsors\minor-logos\ob.png"></a>
 						</div>
 					</div>
 
 					<div class="row">
 						<div class="col-sm-4 center">
-							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\ho-chunk.png"</a>
+							<a href="http://www.ho-chunk.com/" target="_blank"><img class="img-responsive center img-sm" src="images\sponsors\minor-logos\ho-chunk.png"></a>
 						</div>
 						<div class="col-sm-4 center">
-							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\brew.png"</a>
+							<a href="http://milwaukee.brewers.mlb.com/index.jsp?c_id=mil" target="_blank"><img class="img-responsive center img-sm" src="images\sponsors\minor-logos\brew.png"></a>
 						</div>
 						<div class="col-sm-4 center" style="margin-top: 7px";>
-							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\jawjacker.png"</a>
+							<a href="http://www.jawjackerfishing.com/" target="_blank"><img class="img-responsive center img-sm" src="images\sponsors\minor-logos\jawjacker.png"></a>
 						</div>
 					</div>
 
 					<div class="row">
 						<div class="col-sm-4 center">
-							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\ifishpro.png"</a>
+							<<a href="http://ifishpro.com/" target="_blank"><img class="img-responsive center img-sm" src="images\sponsors\minor-logos\ifishpro.png"></a>
 						</div>
 						<div class="col-sm-4 center">
-							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\dangler.png"</a>
+							<a href="http://fishdangler.com/" target="_blank"><img class="img-responsive center img-sm" src="images\sponsors\minor-logos\dangler.png"></a>
 						</div>
 						<div class="col-sm-4 center">
-							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\stcroix.png"</a>
+							<a href="http://stcroixrods.com/" target="_blank"><img class="img-responsive center img-sm" src="images\sponsors\minor-logos\stcroix.png"></a>
 						</div>
 					</div>
 
 					<div class="row">
 						<div class="col-sm-4 center">
-							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\rnb.png"</a>
+							<a href="http://www.rod-n-bobbs.com/index.php?page=home" target="_blank"><img class="img-responsive center img-sm" src="images\sponsors\minor-logos\rnb.png"></a>
 						</div>
 						<div class="col-sm-4 center" style="margin-top: 18px">
-							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\visitec.png"</a>
+							<a href="https://www.visiteauclaire.com/?gclid=CKn55tu-gdICFYWCaQodzkgL7g" target="_blank"><img class="img-responsive center img-sm" src="images\sponsors\minor-logos\visitec.png"></a>
 						</div>
 						<div class="col-sm-4 center" style="margin-top: 18px">
-							<img class="img-responsive center img-sm" src="images\sponsors\minor-logos\jiffy.jpg"</a>
+							<a href="http://www.jiffyonice.com/EComStore/pages/home.aspx" target="_blank"><img class="img-responsive center img-sm" src="images\sponsors\minor-logos\jiffy.jpg"></a>
 						</div>
 					</div>
 
