quick fix to minor sponsors

--- a/sponsors.html
+++ b/sponsors.html
@@ -233,7 +233,7 @@
 
 					<div class="row">
 						<div class="col-sm-4 center">
-							<<a href="http://ifishpro.com/" target="_blank"><img class="img-responsive center img-sm" src="images\sponsors\minor-logos\ifishpro.png"></a>
+							<a href="http://ifishpro.com/" target="_blank"><img class="img-responsive center img-sm" src="images\sponsors\minor-logos\ifishpro.png"></a>
 						</div>
 						<div class="col-sm-4 center">
 							<a href="http://fishdangler.com/" target="_blank"><img class="img-responsive center img-sm" src="images\sponsors\minor-logos\dangler.png"></a>
