Added a comma to demonstrate how github works
see summary above

--- a/schedule.html
+++ b/schedule.html
@@ -176,7 +176,7 @@
 						<tr>
 							<td>The View</td>
 							<td>4:00PM</td>
-							<td>Fish contest winners announced and prizes distributed</td>
+							<td>Fish contest winners announced, and prizes distributed</td>
 						</tr>
 						<tr>
 							<td>The View</td>
