--- a/contact.html
+++ b/contact.html
@@ -124,6 +124,8 @@
     <div class="container">
       <div class="contactForm">
         <form id="contact_form" action="http://formspree.io/recreation@uwec.edu" method="POST" onsubmit="return validateForm();" enctype="multipart/form-data">
+					<input type="hidden" name="_cc" value="poiriesj@uwec.edu" />
+					<input type="text" name="_gotcha" style="display:none" />
           <div class="row">
             <div class="col-md-6">
               <h3 class="headers">Contact Us!</h3>
