fixed firefox image issue
switched \ to /

--- a/index.html
+++ b/index.html
@@ -158,14 +158,14 @@
 
 					 <div class="sponsors">
 						 <a href="http://www.scheels.com" target="_blank">
-	             <img class="indexTitleSponsor" src="images\sponsors\scheelsLarge.png" alt="Scheels">
+	             <img class="indexTitleSponsor" src="images/sponsors/scheelsLarge.png" alt="Scheels">
 	           </a>
 
            <a href="http://www.gordyscountymarket.net" target="_blank">
-             <img class="indexTitleSponsor" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market"></a>
+             <img class="indexTitleSponsor" src="images/sponsors/gordysLarge.png" alt="Gordy's County Market"></a>
 
         <a href="http://www.subway.com/subwayroot/default.aspx" target="_blank">
-					<img class="indexTitleSponsor" src="images\sponsors\Subway.png" alt="Subway"></a>
+					<img class="indexTitleSponsor" src="images/sponsors/Subway.png" alt="Subway"></a>
          </div>
 
 				 	</div>
