--- a/sponsors.html
+++ b/sponsors.html
@@ -125,15 +125,15 @@
 
 				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 				<div class="col-sm-4 center">
-					<a href="http://www.scheels.com" target="_blank"><img class="img-responsive center img-large" src="images\sponsors\scheelsLarge.png" alt="Scheels"></a>
+					<a href="http://www.scheels.com" target="_blank"><img class="img-responsive center img-large" src="images/sponsors/scheelsLarge.png" alt="Scheels"></a>
 				</div>
 
 				<div class="col-sm-4 center">
-					<a href="http://www.gordyscountymarket.net" target="_blank"><img class="img-responsive center img-large" src="images\sponsors\gordysLarge.png" alt="Gordy's County Market"></a>
+					<a href="http://www.gordyscountymarket.net" target="_blank"><img class="img-responsive center img-large" src="images/sponsors/gordysLarge.png" alt="Gordy's County Market"></a>
 				</div>
 
 				<div class="col-sm-4 center">
-					<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="img-responsive center img-large" src="images\sponsors\Subway.png" alt="Subway"></a>
+					<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank"><img class="img-responsive center img-large" src="images/sponsors/Subway.png" alt="Subway"></a>
 				</div>
 			</div>
 				<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
@@ -144,18 +144,18 @@
 				<h2 class="headers"><b>Sponsors</b></h2>
 				<div class="row">
 					<div class="col-sm-3 center">
-						<a href="http://www.eauclaireford.com/" target="_blank"><img class="img-responsive center img-ml" src="images\sponsors\ford.png" alt="Ford"></a>
+						<a href="http://www.eauclaireford.com/" target="_blank"><img class="img-responsive center img-ml" src="images/sponsors/ford.png" alt="Ford"></a>
 					</div>
 					<div class="col-sm-3 center">
-						<a href="http://www.geteskimo.com/" target="_blank"><img class="img-responsive center img-ml" src="images\sponsors\eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
+						<a href="http://www.geteskimo.com/" target="_blank"><img class="img-responsive center img-ml" src="images/sponsors/eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
 					</div>
 
 					<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 					<div class="col-sm-3 center">
-						<a href="http://www.prestigervauto.com/" target="_blank"><img class="img-responsive center img-ml" src="images\sponsors\prestige.png" alt="Presitge Auto Corportation"></a>
+						<a href="http://www.prestigervauto.com/" target="_blank"><img class="img-responsive center img-ml" src="images/sponsors/prestige.png" alt="Presitge Auto Corportation"></a>
 					</div>
 					<div class="col-sm-3 center">
-						<a href="http://www.weau.com/" target="_blank"><img class="img-responsive center img-ml" src="images\sponsors\weau13.png" alt="Weau 13 News"></a>
+						<a href="http://www.weau.com/" target="_blank"><img class="img-responsive center img-ml" src="images/sponsors/weau13.png" alt="Weau 13 News"></a>
 					</div>
 				</div>
 
@@ -163,15 +163,15 @@
 				<div class="row">
 					<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 					<div class="col-sm-4 center">
-						<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="img-responsive center img-med" src="images\sponsors\edge.png" alt="The Edge Pub and Eatery"></a>
+						<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="img-responsive center img-med" src="images/sponsors/edge.png" alt="The Edge Pub and Eatery"></a>
 					</div>
 					<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 					<div class="col-sm-4 center">
-						<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="img-responsive center img-med" src="images\sponsors\view.png" alt="The View"></a>
+						<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="img-responsive center img-med" src="images/sponsors/view.png" alt="The View"></a>
 					</div>
 					<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 					<div class="col-sm-4 center">
-						<a href="http://www.gollonbait.com/" target="_blank"><img class="img-responsive center img-med" src="images\sponsors\gollon.png" alt="Gollon brothers"></a>
+						<a href="http://www.gollonbait.com/" target="_blank"><img class="img-responsive center img-med" src="images/sponsors/gollon.png" alt="Gollon brothers"></a>
 					</div>
 				</div>
 				<br />
@@ -179,79 +179,79 @@
 				<div class="row">
 
 					<div class="col-sm-3 center">
-						<a href="http://www.uwec.edu/dining/" target="_blank"><img class="img-responsive center img-med" src="images\sponsors\dining.png" alt="Blugold Dining by Sodexo"></a>
+						<a href="http://www.uwec.edu/dining/" target="_blank"><img class="img-responsive center img-med" src="images/sponsors/dining.png" alt="Blugold Dining by Sodexo"></a>
 					</div>
 
 					<!-- #col-lg-3 col-md-4 col-xs-6 thumb -->
 
 					<div class="col-sm-3 center">
-						<a href="https://mydynamicfitness.com/" target="_blank"><img class="img-responsive center img-med" src="images\sponsors\dynamic.png" alt="Dynamic Fitness and Strength"></a>
+						<a href="https://mydynamicfitness.com/" target="_blank"><img class="img-responsive center img-med" src="images/sponsors/dynamic.png" alt="Dynamic Fitness and Strength"></a>
 					</div>
 
 					<div class="col-sm-3 center">
-					<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="img-responsive center img-med" src="images\sponsors\xtreme.png" alt="Xtreme Motorsports, LLC"></a>
+					<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="img-responsive center img-med" src="images/sponsors/xtreme.png" alt="Xtreme Motorsports, LLC"></a>
 					</div>
 					<div class="col-sm-3 center">
-						<a href="http://www.leinie.com" target="_blank"><img class="img-responsive center img-med" src="images\sponsors\lein.png" alt="Leinenkugel's"> </a>
+						<a href="http://www.leinie.com" target="_blank"><img class="img-responsive center img-med" src="images/sponsors/lein.png" alt="Leinenkugel's"> </a>
 					</div>
 
 					<div class="row">
 						<div class="col-sm-4 center">
-							<a href="http://briggstent.com/" target="_blank"><img class="img-responsive center img-sm" src="images\sponsors\minor-logos\briggs.png"></a>
+							<a href="http://briggstent.com/" target="_blank"><img class="img-responsive center img-sm" src="images/sponsors/minor-logos/briggs.png"></a>
 						</div>
 						<div class="col-sm-4 center">
-							<a href="https://www.chanhassentheatres.com/Online/default.asp" target="_blank"><img class="img-responsive center img-sm" src="images\sponsors\minor-logos\chanhassen.png"></a>
+							<a href="https://www.chanhassentheatres.com/Online/default.asp" target="_blank"><img class="img-responsive center img-sm" src="images/sponsors/minor-logos/chanhassen.png"></a>
 						</div>
 						<div class="col-sm-4 center">
-							<a href="http://www.packers.com/" target="_blank"><img class="img-responsive center img-sm" src="images\sponsors\minor-logos\gb.png"></a>
+							<a href="http://www.packers.com/" target="_blank"><img class="img-responsive center img-sm" src="images/sponsors/minor-logos/gb.png"></a>
 						</div>
 					</div>
 
 					<div class="row">
 						<div class="col-sm-4 center" style="margin-top: 6px";>
-							<a href="http://www.vexilar.com/" target="_blank"><img class="img-responsive center img-sm" src="images\sponsors\minor-logos\vexilar.png"></a>
+							<a href="http://www.vexilar.com/" target="_blank"><img class="img-responsive center img-sm" src="images/sponsors/minor-logos/vexilar.png"></a>
 						</div>
 						<div class="col-sm-4 center">
-							<a href="http://www.nba.com/bucks/" target="_blank"><img class="img-responsive center img-sm" src="images\sponsors\minor-logos\mb.png"></a>
+							<a href="http://www.nba.com/bucks/" target="_blank"><img class="img-responsive center img-sm" src="images/sponsors/minor-logos/mb.png"></a>
 						</div>
 						<div class="col-sm-4 center">
-							<a href="https://www.otterbox.com/" target="_blank"><img class="img-responsive center img-sm" src="images\sponsors\minor-logos\ob.png"></a>
+							<a href="https://www.otterbox.com/" target="_blank"><img class="img-responsive center img-sm" src="images/sponsors/minor-logos/ob.png"></a>
 						</div>
 					</div>
 
 					<div class="row">
 						<div class="col-sm-4 center">
-							<a href="http://www.ho-chunk.com/" target="_blank"><img class="img-responsive center img-sm" src="images\sponsors\minor-logos\ho-chunk.png"></a>
+							<a href="http://www.ho-chunk.com/" target="_blank"><img class="img-responsive center img-sm" src="images/sponsors/minor-logos/ho-chunk.png"></a>
 						</div>
 						<div class="col-sm-4 center">
-							<a href="http://milwaukee.brewers.mlb.com/index.jsp?c_id=mil" target="_blank"><img class="img-responsive center img-sm" src="images\sponsors\minor-logos\brew.png"></a>
+							<a href="http://milwaukee.brewers.mlb.com/index.jsp?c_id=mil" target="_blank"><img class="img-responsive center img-sm" src="images/sponsors/minor-logos/brew.png"></a>
 						</div>
 						<div class="col-sm-4 center" style="margin-top: 7px";>
-							<a href="http://www.jawjackerfishing.com/" target="_blank"><img class="img-responsive center img-sm" src="images\sponsors\minor-logos\jawjacker.png"></a>
+							<a href="http://www.jawjackerfishing.com/" target="_blank"><img class="img-responsive center img-sm" src="images/sponsors/minor-logos/jawjacker.png"></a>
 						</div>
 					</div>
 
 					<div class="row">
 						<div class="col-sm-4 center">
-							<a href="http://ifishpro.com/" target="_blank"><img class="img-responsive center img-sm" src="images\sponsors\minor-logos\ifishpro.png"></a>
+							<a href="http://ifishpro.com/" target="_blank"><img class="img-responsive center img-sm" src="images/sponsors/minor-logos/ifishpro.png"></a>
 						</div>
 						<div class="col-sm-4 center">
-							<a href="http://fishdangler.com/" target="_blank"><img class="img-responsive center img-sm" src="images\sponsors\minor-logos\dangler.png"></a>
+							<a href="http://fishdangler.com/" target="_blank"><img class="img-responsive center img-sm" src="images/sponsors/minor-logos/dangler.png"></a>
 						</div>
 						<div class="col-sm-4 center">
-							<a href="http://stcroixrods.com/" target="_blank"><img class="img-responsive center img-sm" src="images\sponsors\minor-logos\stcroix.png"></a>
+							<a href="http://stcroixrods.com/" target="_blank"><img class="img-responsive center img-sm" src="images/sponsors/minor-logos/stcroix.png"></a>
 						</div>
 					</div>
 
 					<div class="row">
 						<div class="col-sm-4 center">
-							<a href="http://www.rod-n-bobbs.com/index.php?page=home" target="_blank"><img class="img-responsive center img-sm" src="images\sponsors\minor-logos\rnb.png"></a>
+							<a href="http://www.rod-n-bobbs.com/index.php?page=home" target="_blank"><img class="img-responsive center img-sm" src="images/sponsors/minor-logos/rnb.png"></a>
 						</div>
 						<div class="col-sm-4 center" style="margin-top: 18px">
-							<a href="https://www.visiteauclaire.com/?gclid=CKn55tu-gdICFYWCaQodzkgL7g" target="_blank"><img class="img-responsive center img-sm" src="images\sponsors\minor-logos\visitec.png"></a>
+							<a href="https://www.visiteauclaire.com/?gclid=CKn55tu-gdICFYWCaQodzkgL7g" target="_blank"><img class="img-responsive center img-sm" src="images/sponsors/minor-logos/visitec.png"></a>
 						</div>
 						<div class="col-sm-4 center" style="margin-top: 18px">
-							<a href="http://www.jiffyonice.com/EComStore/pages/home.aspx" target="_blank"><img class="img-responsive center img-sm" src="images\sponsors\minor-logos\jiffy.jpg"></a>
+							<a href="http://www.jiffyonice.com/EComStore/pages/home.aspx" target="_blank"><img class="img-responsive center img-sm" src="images/sponsors/minor-logos/jiffy.jpg"></a>
 						</div>
 					</div>
 
