Removed Live Results and added text to front page

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 
 
     <div class="text-center">
-
+			<h3 class="headers"><b>Check back later for the final results!</b></h3>
       <h1 class="headers"><b>4th Annual Jig's Up Ice Fishing Contest</b></h1>
       <h5 class="headers">Presented by UWEC Recreation, UWEC Athletics, and the Lake Wissota Lions Club</h5>
       <img alt="Sponsors Logo" src="images/3logo-bg.png">
@@ -193,8 +193,6 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-
-
           <h3 class="headers"><b>When:</b></h3>
           <h3>Saturday, February 11th, 2017; 7am-2pm</h3>
           <br />
