--- a/liveResults.html
+++ b/liveResults.html
@@ -140,7 +140,7 @@
       </div>
       <!-- #container -->
 			<div class="fluidmedia">
-      	<iframe src="https://docs.google.com/spreadsheets/d/11qkcczDb8saim6SOrIxxfJInn8joUcZMwaX914G5ovI/pubhtml?gid=1524536550&single=true"></iframe>
+      	<iframe src=""></iframe>
 			</div>
 			<!-- #table-responsive -->
       <br /> <!-- BREAK -->
