--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 							<li role="presentation" class="divider"></li>
 							<li><a href="pastResults.html">Past Results</a></li>
 							<li role="presentation" class="divider"></li>
-							<li><a href="assets/rules2017.pdf" target="_blank">Rules</a></li>
+							<li><a href="assets/2017_Rules_of_the_Tournament2.pdf" target="_blank">Rules</a></li>
 						</ul>
 					</li>
 					<li class="sliding-middle-out"><a href="prizes.html">Prizes</a></li>
@@ -225,9 +225,6 @@
           <!-- BREAK -->
           <br />
           <!-- BREAK -->
-          <div class="btn-center">
-            <a target="_blank" href="assets/2017_Rules_of_the_Tournament2.pdf"> <button class="btn1">Click here to see the rules</button></a>
-          </div>
         </div>
 
         <!-- #col-sm-6  -->
