Fixed Rules with 2017 rules
Casey, the rules that you updated was a document that said 2017 but
when you view it, it was the old 2016 rule set.

--- a/tickets.html
+++ b/tickets.html
@@ -119,7 +119,7 @@
 
 			<br />
 			<br />
-			<h2 class="headers"><a href="https://www.eventbrite.com/e/jigs-up-blugold-ice-fishing-contest-on-lake-wissota-tickets-28840941031">Register Here!</a></h2>
+			<h2 class="headers"><a href="https://www.eventbrite.com/e/jigs-up-blugold-ice-fishing-contest-on-lake-wissota-tickets-28840941031">Buy Tickets Here!</a></h2>
 			<h4 class="headers">Fish Tickets:</h4>
 			<h4>$25, one ticket required for each fish registered, multiple tickets may be purchased </h4>
 			<blockquote>
