Added prizes to species winners
*$100 Cash

--- a/index.html
+++ b/index.html
@@ -365,12 +365,13 @@
 											<th>Contestant</th>
 											<th>Weight</th>
 											<th>Species</th>
+											<th>Prize</th>
 										</tr>
 									</thead>
 									<tbody>
-											<tr><td>Jeremy Kurkowski</td><td>6.59</td><td>Walleye</td></tr>
-											<tr><td>Tianna Ohren</td><td>9.939</td><td>Northern</td></tr>
-											<tr><td>Todd Rowan</td><td>1.517</td><td>Pan Fish - Crappie</td></tr>
+											<tr><td>Jeremy Kurkowski</td><td>6.59</td><td>Walleye</td><td>*$100 Cash</td></tr>
+											<tr><td>Tianna Ohren</td><td>9.939</td><td>Northern</td><td>*$100 Cash</td></tr>
+											<tr><td>Todd Rowan</td><td>1.517</td><td>Pan Fish - Crappie</td><td>*$100 Cash</td></tr>
 									</tbody>
 								</table>
 							</div>
