Past Results FINISHED
finished converting all tables to JSON and having page load past results.

--- a/test.html
+++ b/test.html
@@ -10,9 +10,15 @@
     <p><u>Does Javascript work??????</u></p>
     <p id="work">No</p>
     <script src="scripts\test.js"></script>
-
-    <p>-------------------------------------------------------------------</p>
-
     <script src="scripts\tableTest.js"></script>
+    <p>-------------------------------------------------------------------</p>
+    <table>
+      <thead>
+      </thead>
+      <tbody id="tbody">
+      </tbody>
+    </table>
+
+
   </body>
 </html>
