--- a/pastResults.html
+++ b/pastResults.html
@@ -159,7 +159,7 @@
 <!-- new -->
 
 
-<script src="scripts\tableBuilder.js"></script>
+<script src="scripts/tableBuilder.js"></script>
 
 
 				<div class="panel panel-default">
