--- a/pastResults.html
+++ b/pastResults.html
@@ -15,7 +15,7 @@
 	<link href="css/custom.css" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet" type="text/css">
 	<script src="js/lib/modernizr-2.6.2.min.js" type="text/javascript"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="js/lib/jquery-1.9.1.min.js"></script>
 
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
